--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "demo:update-incident": "cross-env STATUSFY_LERNA=true yarn workspace statusfy-demo update-incident",
     "website:dev": "yarn workspace statusfy-website dev",
     "website:generate": "yarn workspace statusfy-website generate",
-    "update-changelog": "conventional-changelog -p angular -r 2 -i CHANGELOG.md -s"
+    "update-changelog": "conventional-changelog -p angular -r 2 -i CHANGELOG.md -s",
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
     "@babel/core": "7.8.3",
